2012-04-03  Vanessa Gil  <vanessa.gil@artica.es>

	* general/header.php
	  include/functions_groups.php
	  include/functions_messages.php
	  include/javascript/jquery.pandora.js
	  operation/menu.php: Added operation: Modify sending and receiving
	messages.

	* images/email_go.png
	  images/email_edit.png
	  operation/messages/message_list.php
	  operation/messages/message_edit.php: Added files.

2012-04-02 Dario Rodriguez <dario.rodriguez@artica.es>

	*operation/snmpconsole/snmp_view.php,
	godmode/menu.php: Fixed some errors with links to new snmp menus.

2012-04-02 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/menu.php
	godmode/menu.php
	godmode/snmpconsole/snmp_trap_generator.php
	godmode/snmpconsole/snmp_alert.php
	godmode/snmpconsole/snmp_filters.php: Created new SNMP Console submenu
	inside monitoring item.

2012-04-02 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_html.php: added into function "html_debug_print" the
	equal output to log file, this is with more data.
	
	* include/functions_db.php: cleaned source code style.
	
	* extensions/update_pandora/functions.ajax.php,
	extensions/update_pandora/functions.php,
	extensions/update_manager/lib/libupdate_manager.php,
	extensions/update_pandora.php: added extension to update pandora from the
	targz of Sourceforge.

2012-04-02  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reporting.php
	operation/reporting/reporting_xml.php: Fixed a missed 
	modification of previous commit and added xml export
	to the new report items of inventory and inventory changes
	merged from trunk

2012-04-02 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/menu.php: Fixed a problem with new visual console menu and
	selected style when navigation through visual console editor.

2012-04-02 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_menu.php,
	extensions/users_connected.php,
	operation/incidents/incident.php,
	operation/incidents/incident_detail.php,