@@ -75,6 +75,6 @@ function extension_uploader_extensions() {
 	echo "</form>";
 }
 
-extensions_add_godmode_menu_option(__('Extension uploader'), 'AM', 'gextensions');
+extensions_add_godmode_menu_option(__('Extension uploader'), 'AM');
 extensions_add_godmode_function('extension_uploader_extensions');
 ?>
