@@ -45,7 +45,6 @@ function menu_print_menu (&$menu) {
 	
 	foreach ($menu as $mainsec => $main) {
 		$extensionInMenuParameter = (string) get_parameter ('extension_in_menu','');
-		
 		$showSubsection = true;
 		if ($extensionInMenuParameter != '') {
 			if ($extensionInMenuParameter == $mainsec)
@@ -218,8 +217,8 @@ function menu_print_menu (&$menu) {
 					else {
 						$imageIcon = $imageIconDefault;
 					}
-					
-					$submenu_output .= '<div style="background: url('.$imageIcon.') no-repeat; width: 16px; height: 16px; float: left; margin: 5px 0px 0px 3px;">&nbsp;</div>';
+					//Delete extension Icon before the was a style with background: url('.$imageIcon.') no-repeat; 
+					$submenu_output .= '<div style="width: 16px; height: 16px; float: left; margin: 5px 0px 0px 3px;">&nbsp;</div>';
 				}
 				
 				
