@@ -1,3 +1,13 @@
+2012-04-03 Dario Rodriguez <dario.rodriguez@artica.es>
+
+	* include/functions_menu.php: Deleted extension icon on menus.
+
+	* extensions/extension_uploader.php: Fixed wrong link to menu for this
+	extension.
+
+	* operation/menu.php,
+	godmode/menu.php: Fixed duplicated extension links on menus.
+
 2012-04-03  Vanessa Gil  <vanessa.gil@artica.es>
 
 	* general/header.php
